--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "89fb3a4f-6a11-40f4-a921-27abd6e752cb",
    "metadata": {},
    "outputs": [],
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "6d9d613e-8fa0-4c5c-9aff-a9b21a3dcc70",
    "metadata": {},
    "outputs": [],
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "46a57d3a-2ed5-4986-8ab3-3c96a7694c07",
    "metadata": {},
    "outputs": [
@@ -211,7 +211,7 @@
        "Name: proportion, dtype: float64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "1df85ab8-a262-4415-8a71-ce585f26277e",
    "metadata": {},
    "outputs": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "10073c9a-6d50-4804-8115-c4b6141d4b81",
    "metadata": {},
    "outputs": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "c1839c7d-a6d2-4b70-8a5f-f4f9dcba8add",
    "metadata": {},
    "outputs": [
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "96cfe37e-75dd-4011-a5c8-3fffcf4bfb6d",
    "metadata": {},
    "outputs": [
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "6f4934c4-5948-42db-9f00-235052e8c2e9",
    "metadata": {},
    "outputs": [
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "d746e7a9-8aea-4008-a83e-5bddb3f533d3",
    "metadata": {},
    "outputs": [],
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "72cce72a-7144-4b45-a814-e4e22cdeac38",
    "metadata": {},
    "outputs": [],
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "23dc7d48-e0e0-4bcb-945c-ee7df89f89b8",
    "metadata": {},
    "outputs": [],
@@ -375,8 +375,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "31d088b2-a1eb-47fc-bea3-0763aef2227e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fraud.to_csv(\"../Data/processed/fraud_processed.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f944c8ac-6628-4da0-bd52-21e3a7e7c1ea",
    "metadata": {},
    "outputs": [],
    "source": []
