--- a/notebooks/modeling.ipynb
+++ b/notebooks/modeling.ipynb
@@ -373,95 +373,87 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b4f2560c-1bd2-439d-a81f-3f5d26a3a711",
+   "id": "f0120bfa-996e-4f36-9dc7-87e7dd8c0859",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'shap'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[8], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mshap\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mplt\u001b[39;00m\n\u001b[0;32m      4\u001b[0m explainer \u001b[38;5;241m=\u001b[39m shap\u001b[38;5;241m.\u001b[39mTreeExplainer(rf)\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'shap'"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "X_test_sample = X_test.sample(n=1000, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "92c1d01b-700e-41b5-bebc-ce6cb041756b",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import shap\n",
-    "import matplotlib.pyplot as plt\n",
     "\n",
     "explainer = shap.TreeExplainer(rf)\n",
-    "shap_values = explainer.shap_values(X_test)\n",
-    "shap.summary_plot(shap_values[1], X_test, plot_type=\"bar\")\n",
-    "shap.summary_plot(shap_values[1], X_test)\n",
-    "tp_index = (y_test == 1) & (y_pred_rf == 1)\n",
-    "shap.force_plot(explainer.expected_value[1], shap_values[1][tp_index][0], X_test.iloc[tp_index].iloc[0], matplotlib=True)\n",
-    "fp_index = (y_test == 0) & (y_pred_rf == 1)\n",
-    "shap.force_plot(explainer.expected_value[1], shap_values[1][fp_index][0], X_test.iloc[fp_index].iloc[0], matplotlib=True)\n",
-    "fn_index = (y_test == 1) & (y_pred_rf == 0)\n",
-    "shap.force_plot(explainer.expected_value[1], shap_values[1][fn_index][0], X_test.iloc[fn_index].iloc[0], matplotlib=True)"
+    "shap_values = explainer.shap_values(X_test_sample)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "a22452f8-5044-45aa-a8d5-7dcd8f013620",
+   "execution_count": 15,
+   "id": "1d38e806-55b1-4c49-af5c-e59511cf9381",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['user_id', 'purchase_value', 'age', 'ip_address', 'hour_of_day',\n",
-       "       'day_of_week', 'time_since_signup', 'user_txn_count', 'source_Direct',\n",
-       "       'source_SEO', 'browser_FireFox', 'browser_IE', 'browser_Opera',\n",
-       "       'browser_Safari', 'sex_M'],\n",
-       "      dtype='object')"
+       "user_id                int64\n",
+       "purchase_value         int64\n",
+       "age                    int64\n",
+       "ip_address             int64\n",
+       "hour_of_day            int64\n",
+       "day_of_week            int64\n",
+       "time_since_signup    float64\n",
+       "user_txn_count         int64\n",
+       "source_Direct           bool\n",
+       "source_SEO              bool\n",
+       "browser_FireFox         bool\n",
+       "browser_IE              bool\n",
+       "browser_Opera           bool\n",
+       "browser_Safari          bool\n",
+       "sex_M                   bool\n",
+       "dtype: object"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "ea8752fd-09e4-4d27-8aa1-78519fa0528f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([dtype('int64'), dtype('float64'), dtype('bool')], dtype=object)"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X.dtypes.unique()"
+    "X_train_res.dtypes"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "6f6070ce-ea4d-468f-af07-18b70dfe1f22",
+   "id": "d4ffbb7f-d67a-40c9-a090-928515ee6130",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['signup_time', 'purchase_time', 'device_id', 'source', 'browser',\n",
-       "       'sex'],\n",
-       "      dtype='object')"
+       "user_id                int64\n",
+       "purchase_value         int64\n",
+       "age                    int64\n",
+       "ip_address             int64\n",
+       "hour_of_day            int64\n",
+       "day_of_week            int64\n",
+       "time_since_signup    float64\n",
+       "user_txn_count         int64\n",
+       "source_Direct           bool\n",
+       "source_SEO              bool\n",
+       "browser_FireFox         bool\n",
+       "browser_IE              bool\n",
+       "browser_Opera           bool\n",
+       "browser_Safari          bool\n",
+       "sex_M                   bool\n",
+       "dtype: object"
       ]
      },
      "execution_count": 16,
@@ -470,13 +462,113 @@
     }
    ],
    "source": [
-    "X_train.select_dtypes(include=['object']).columns"
+    "X_test_sample.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "2a6b914d-de47-4388-bb28-522d11aacff6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train_res_num = X_train_res.astype(float)\n",
+    "X_test_sample_num = X_test_sample.astype(float)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "75f83676-145f-4628-8b4c-ea91fa278c32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train_res_num = X_train_res.apply(pd.to_numeric, errors=\"coerce\")\n",
+    "X_test_sample_num = X_test_sample.apply(pd.to_numeric, errors=\"coerce\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "43dd8957-c28e-4c65-bd19-61f20c5ae116",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Series([], dtype: int64)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X_train_res_num.isna().sum()[X_train_res_num.isna().sum() > 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "c54d3243-5e2a-49ad-a0a2-ad2b306c7b2a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train_res_num = X_train_res_num.fillna(X_train_res_num.mean())\n",
+    "X_test_sample_num = X_test_sample_num.fillna(X_train_res_num.mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "58e8cbad-cfa1-46a4-8956-5d67a749a6cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "explainer = shap.TreeExplainer(rf)\n",
+    "shap_values = explainer.shap_values(X_test_sample_num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "302384b2-e6df-45a6-88c3-36fa9f1ef987",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_test_sample_num = X_test_sample_num[X_train_res_num.columns]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "de08ecdb-1bc7-4807-a7b1-cda81529c725",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "The shape of the shap_values matrix does not match the shape of the provided data matrix.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[27], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mshap\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msummary_plot\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m      2\u001b[0m \u001b[43m    \u001b[49m\u001b[43mshap_values\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m   \u001b[49m\n\u001b[0;32m      3\u001b[0m \u001b[43m    \u001b[49m\u001b[43mX_test_sample_num\u001b[49m\u001b[43m,\u001b[49m\u001b[43m       \u001b[49m\n\u001b[0;32m      4\u001b[0m \u001b[43m    \u001b[49m\u001b[43mplot_type\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mbar\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m      5\u001b[0m \u001b[43m    \u001b[49m\u001b[43mfeature_names\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mX_test_sample_num\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\n\u001b[0;32m      6\u001b[0m \u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mD:\\gigggs\\10Academy\\week5-10academy\\.venv\\lib\\site-packages\\shap\\plots\\_beeswarm.py:664\u001b[0m, in \u001b[0;36msummary_legacy\u001b[1;34m(shap_values, features, feature_names, max_display, plot_type, color, axis_color, title, alpha, show, sort, color_bar, plot_size, layered_violin_max_num_bins, class_names, class_inds, color_bar_label, cmap, show_values_in_legend, use_log_scale, rng)\u001b[0m\n\u001b[0;32m    659\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    660\u001b[0m             shape_msg \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m Perhaps the extra column in the shap_values matrix is the \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    661\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mconstant offset? Of so just pass shap_values[:,:-1].\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    662\u001b[0m         )\n\u001b[0;32m    663\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m--> 664\u001b[0m         \u001b[38;5;28;01massert\u001b[39;00m num_features \u001b[38;5;241m==\u001b[39m features\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m1\u001b[39m], shape_msg\n\u001b[0;32m    666\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m feature_names \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    667\u001b[0m     feature_names \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([labels[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFEATURE\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m%\u001b[39m \u001b[38;5;28mstr\u001b[39m(i) \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(num_features)])\n",
+      "\u001b[1;31mAssertionError\u001b[0m: The shape of the shap_values matrix does not match the shape of the provided data matrix."
+     ]
+    }
+   ],
+   "source": [
+    "shap.summary_plot(\n",
+    "    shap_values[1],   \n",
+    "    X_test_sample_num,       \n",
+    "    plot_type=\"bar\",\n",
+    "    feature_names=X_test_sample_num.columns\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0120bfa-996e-4f36-9dc7-87e7dd8c0859",
+   "id": "21d52702-0c0c-4e83-a097-d8fc3f905f79",
    "metadata": {},
    "outputs": [],
    "source": []
